--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "async": "^3.2.0",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "rethinkdb": "^2.4.2",
     "three": "^0.126.0",
